edited getPackages method